// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createInitialMerkleTree 1`] = `{}`;

exports[`diffMerkleTrees 1`] = `
{
  "_tag": "None",
}
`;

exports[`diffMerkleTrees 2`] = `
{
  "_tag": "Some",
  "value": 1656873720000,
}
`;

exports[`insertIntoMerkleTree 1`] = `
{
  "0": {
    "hash": -1416139081,
  },
  "hash": -1416139081,
}
`;

exports[`insertIntoMerkleTree 2`] = `
{
  "1": {
    "2": {
      "2": {
        "0": {
          "2": {
            "2": {
              "1": {
                "2": {
                  "2": {
                    "2": {
                      "0": {
                        "0": {
                          "1": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": -468843282,
                                },
                                "hash": -468843282,
                              },
                              "hash": -468843282,
                            },
                            "hash": -468843282,
                          },
                          "hash": -468843282,
                        },
                        "hash": -468843282,
                      },
                      "hash": -468843282,
                    },
                    "hash": -468843282,
                  },
                  "hash": -468843282,
                },
                "hash": -468843282,
              },
              "hash": -468843282,
            },
            "hash": -468843282,
          },
          "hash": -468843282,
        },
        "hash": -468843282,
      },
      "hash": -468843282,
    },
    "hash": -468843282,
  },
  "hash": -468843282,
}
`;

exports[`insertIntoMerkleTree 3`] = `
{
  "0": {
    "hash": -1416139081,
  },
  "1": {
    "2": {
      "2": {
        "0": {
          "2": {
            "2": {
              "1": {
                "2": {
                  "2": {
                    "2": {
                      "0": {
                        "0": {
                          "1": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": -468843282,
                                },
                                "hash": -468843282,
                              },
                              "hash": -468843282,
                            },
                            "hash": -468843282,
                          },
                          "hash": -468843282,
                        },
                        "hash": -468843282,
                      },
                      "hash": -468843282,
                    },
                    "hash": -468843282,
                  },
                  "hash": -468843282,
                },
                "hash": -468843282,
              },
              "hash": -468843282,
            },
            "hash": -468843282,
          },
          "hash": -468843282,
        },
        "hash": -468843282,
      },
      "hash": -468843282,
    },
    "hash": -468843282,
  },
  "hash": 1335454297,
}
`;
